# blast-besties

./: .gitignore  GRANvsBR34_BR34vsGRAN_reciprocal_pairs.tab  LICENSE  LICENSE.txt  README.md  blastBesties.py  env_osx64.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml
blast_besties.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
blastbesties/: __init__.py  cmd_rbb.py
blastbesties.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/blastbesties/: app.py  blastops.py  logs.py  utils.py
tests/: test_blastops.py
