[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "blastbesties"
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]

description = "Rapid discovery of reciprocal best blast pairs from BLAST output files."

readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["argparse_tui"]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/adamtaranto/blast-besties"
documentation = "https://github.com/adamtaranto/blast-besties"
repository = "https://github.com/adamtaranto/blast-besties"

[project.scripts]
blastbesties = "blastbesties.app:main"

[tool.hatch.build]
source = "src"

exclude = [
    "environment.yml",
    "env_osx64.yml",
    ".github",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/blastbesties/_version.py"

[project.optional-dependencies]
tests = ["pytest"]